--- a/docs/advance/management/player-management/client-distribution.mdx
+++ b/docs/advance/management/player-management/client-distribution.mdx
@@ -40,14 +40,10 @@ sidebar_position: 6
 
 2. **解压至整合包目录，以 HMCL 为例，结构如下：**
 
-    ```plain text
-    MyModpack/
-    ├── java/
-    │   └── bin/
-    ├── HMCL.exe
-    ├── hmcl.json
-    └── .minecraft/
-    ```
+import StructureExplorer from "@site/src/components/StructureExplorer";
+import { hmclModpackStructure } from "@site/src/data/structures";
+
+<StructureExplorer data={hmclModpackStructure} />
 
 3. **调整启动器设置：**
    以 HMCL 为例，前往 **版本管理** ，确保启用了 **启用版本特定游戏设置（不影响其他游戏版本）** ，**游戏 Java** 选择 **指定 Java 版本** ，在此选项同一行的右侧输入框中填写以下内容：
