--- a/docs/advance/viaproxy/configuration.mdx
+++ b/docs/advance/viaproxy/configuration.mdx
@@ -3,6 +3,9 @@ title: 配置详解
 sidebar_position: 3
 ---
 
+import StructureExplorer from "@site/src/components/StructureExplorer";
+import { viaproxyStructure } from "@site/src/data/structures";
+
 # 配置详解
 
 本文档详细介绍 ViaProxy 的各种配置选项和参数设置。
@@ -11,20 +14,7 @@ sidebar_position: 3
 
 ViaProxy 使用 YAML 格式的配置文件，主要包含以下几个部分：
 
-```text
-viaproxy/
-├── viaproxy.yml          # 主配置文件
-├── ViaLoader/            # 协议转换配置
-│   ├── viaversion.yml
-│   ├── viabackwards.yml
-│   ├── viarewind.yml
-│   ├── vialegacy.yml
-│   ├── viabedrock.yml
-│   └── viaaprilfools.yml
-├── plugins/              # 插件目录
-├── logs/                 # 日志目录
-└── saves.json            # 服务器保存数据
-```
+<StructureExplorer data={viaproxyStructure} />
 
 ## 主配置文件 (viaproxy.yml)
 
