--- a/src/content/docs/general/advance/bot/general.mdx
+++ b/src/content/docs/general/advance/bot/general.mdx
@@ -42,8 +42,8 @@ import { TabItem, Tabs } from "@astrojs/starlight/components";
 | -------- | ------------------------------------------------------------------------------------------- |
 | 相关链接 | [文档站](https://docs.inectar.cn/docs/easybot/intor)                                        |
 | 作者     | [easybot-team](https://github.com/easybot-team/)                                            |
-| 支持平台 | Java 版 基岩版 MCDR                                                                         |
-| 介绍     | 基于 Blazor 开发的跨平台群服互通框架，使用 OneBot11 标准接入 QQ，配置较为复杂但实现效果较好 |
+| 支持平台 | Java 版  MCDR Fabric/Quilt NeoForge Forge                                                                        |
+| 介绍     | 基于 .NET8.0+React 开发的跨平台群服互通框架，使用 OneBot11 标准接入 QQ，支持自定义脚本，高级图片渲染等功能 |
 | 下载     | [官网下载](https://docs.inectar.cn/download/easybot)                                        |
 
 </TabItem>
