--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ description: 一群笨蛋编写的 Minecraft 开服教程
 template: splash
 lastUpdated: false
 hero:
-    tagline: 主要针对高版本 Java 版和基岩版服务器的开服指南。从零开始，手把手教你搭建和运营 Minecraft 服务器～
+    tagline: 主要针对高版本 Java 版和基岩版服务器的开服指南。<br>从零开始，手把手教你搭建和运营 Minecraft 服务器～
     image:
         file: ../../assets/book.png
     actions:
@@ -15,19 +15,22 @@ hero:
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 import { ContributorList } from "starlight-contributor-list";
-import LinkCard from "/src/components/LinkCard.astro";
+import LinkCard from "@components/LinkCard.astro";
 
 ## 下一步
 
-<CardGrid stagger>
+<CardGrid>
     <LinkCard title="新手入门" icon="pencil" href="/general/intro">
         了解教程定位、阅读指引与基础要求
+    </LinkCard>
+    <LinkCard title="基岩版核心" icon="add-document" href="/bedrock/intro">
+        基岩版服务器开服指南
     </LinkCard>
     <LinkCard title="Java 版核心" icon="document" href="/java/intro">
         高版本 Java 版服务器开服指南
     </LinkCard>
-    <LinkCard title="基岩版核心" icon="add-document" href="/bedrock/intro">
-        基岩版服务器开服指南
+    <LinkCard title="关于我们" icon="add-document" href="/about/intro">
+        关于 NitWikit 的历史和发展
     </LinkCard>
 </CardGrid>
 
