--- a/src/content/docs/about/timeline.mdx
+++ b/src/content/docs/about/timeline.mdx
@@ -2,7 +2,7 @@
 title: 时间线
 ---
 
-import TimeLine from "/src/components/Timeline.vue";
+import TimeLine from "@components/Timeline.vue";
 
 欢迎来到 Cubic-Project 的发展时间线！
 
