--- a/src/content/docs/general/reading-guide.mdx
+++ b/src/content/docs/general/reading-guide.mdx
@@ -4,19 +4,19 @@ title: 阅读指引
 
 import { LinkCard } from "@astrojs/starlight/components";
 
-这是本文档的阅读指引，为你提供参考，不至于摸不着头脑
+这是本文档的阅读指引，为你提供参考，不至于摸不着头脑。
 
 ## 我想开 Java 版服务器
 
 :::tip
 
-通常与下面的 Bedrock (基岩) 二选一
+通常与下面的 Bedrock (基岩) 二选一。
 
 :::
 
-点击文档顶部 (对于手机用户是左上角三条杠) 的 **“Java”** 按钮跳转到 Java 版 的教程
+点击文档顶部 (对于手机用户是左上角三条杠) 的 **“Java”** 按钮跳转到 Java 版 的教程，
 
-然后按照那里的目录顺序从上到下阅读
+然后按照那里的目录顺序从上到下阅读。
 
 <LinkCard
     title="快速开始 - Java 版服务器"
@@ -28,13 +28,13 @@ import { LinkCard } from "@astrojs/starlight/components";
 
 :::tip
 
-通常与上面的 Java 二选一
+通常与上面的 Java 二选一。
 
 :::
 
-点击文档顶部 (对于手机用户是左上角三条杠) 的 **“Bedrock”** 按钮跳转到 基岩版 的教程
+点击文档顶部 (对于手机用户是左上角三条杠) 的 **“Bedrock”** 按钮跳转到 基岩版 的教程，
 
-然后按照那里的目录顺序从上到下阅读
+然后按照那里的目录顺序从上到下阅读。
 
 <LinkCard
     title="快速开始 - Bedrock 版服务器"
@@ -44,6 +44,6 @@ import { LinkCard } from "@astrojs/starlight/components";
 
 ## 跳转
 
-例如在 **"Java"** 的 [选择、下载和安装 Java](/general/java/choose-and-download-and-install-java) 只贴了一行链接跳转到了通用
+例如在 **"Java"** 的 [选择、下载和安装 Java](/general/java/choose-and-download-and-install-java) 只贴了一行链接跳转到了通用，
 
-这是因为此部分内容 **“Java”** 与 **“Bedrock”** 相同。阅读完成那节回来即可
+这是因为此部分内容 **“Java”** 与 **“Bedrock”** 相同，阅读完成那节回来即可。
