--- a/src/content/docs/general/advance/management/player-management/client-distribution.mdx
+++ b/src/content/docs/general/advance/management/player-management/client-distribution.mdx
@@ -38,6 +38,7 @@ import { FileTree } from "@astrojs/starlight/components";
 
 2. **解压至整合包目录，以 HMCL 为例，结构如下：**
 
+    {/* prettier-ignore */}
     <FileTree>
     - MyModpack
         - java
@@ -45,7 +46,6 @@ import { FileTree } from "@astrojs/starlight/components";
         - HMCL.exe
         - hmcl.json
         - .minecraft
-
     </FileTree>
 
 3. **调整启动器设置：**
