📝 添加红石系统优化建议，更新相关提示信息

--- a/src/content/docs/java/advance/optimize/go.mdx
+++ b/src/content/docs/java/advance/optimize/go.mdx
@@ -1020,13 +1020,23 @@ exp: 4.0
 
 在 `paper-world-default.yml` 中控制红石系统使用的引擎。
 
+:::tip
+
 推荐值：ALTERNATE_CURRENT
 
-将红石系统替换为优化版本，减少冗余更新，降低服务器必须计算的逻辑量。可能会对个别的红石机器产生影响，
+:::
+
+将红石系统替换为优化版本，减少冗余更新，降低服务器必须计算的逻辑量。可能会对~~个别~~的红石机器产生影响，
 
 但其提升非常大，性能提升可能有 70%，利大于弊。甚至还可以修复 Bukkit 造成的红石同步问题。
 
 `ALTERNATE_CURRENT`是基于 [Alternate Current](https://modrinth.com/mod/alternate-current)。更多信息请阅读该页面。
+
+:::caution
+
+此选项会使 TNT 复制失效，生电服请不要考虑此选项。
+
+:::
 
 ### 漏斗
 
